<resources>

    <string name="app_name">jros2droid</string>
    <string name="description">Publish or subscribe to ROS2 topics of type std_msgs/String\n\All interactions with ROS happen through <a href="https://github.com/lambdaprime/jrosclient">jrosclient</a>\n\n</string>
    <string name="topicName">Topic name:</string>
    <string name="publish">Publish</string>
    <string name="subscribe">Subscribe</string>
    <string name="stop">Stop</string>

</resources>