<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

 	<TextView android:id="@+id/description"
    	android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/description" />

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/topicName" />

	<EditText android:id="@+id/topicName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="helloRos"
		android:singleLine="true" />

	<Button android:id="@+id/publish"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/publish" />

	<Button android:id="@+id/subscribe"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/subscribe" />

	<Button android:id="@+id/stop"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/stop" />
		
	<ListView android:id="@+id/logView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />
</LinearLayout>
